fix(style): h1 too big on mobile device

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -32,7 +32,7 @@ h6 {
 }
 
 h1 {
-	@apply text-3xl md:text-4xl;
+	@apply text-2xl md:text-4xl;
 }
 
 h2 {
